--- a/shop_site/users/templates/users/login.html
+++ b/shop_site/users/templates/users/login.html
@@ -43,7 +43,7 @@
 
         <button type="submit">Войти</button>
 
-        <p>Нет аккаунта? <a href="#">Зарегистрироваться</a></p>
+        <p>Нет аккаунта? <a href="{% url 'users:register' %}">Зарегистрироваться</a></p>
     </form>
 </body>
 </html>
